Fixes jumbotron look on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -95,3 +95,26 @@ iframe {
   background-image: linear-gradient(#2d2d2d, #404040, #1a1a1a);
   margin-top: 30px;
 }
+
+@media (max-width: 768px) {
+  .jumbotron {
+    padding: 20px 15px;
+    min-height: auto;
+  }
+  
+  .jumbotron .col-4 {
+    position: static;
+    transform: none;
+    padding-left: 15px;
+    margin-bottom: 15px;
+  }
+  
+  .jumbotron .col-4 img {
+    max-width: 80px;
+    height: auto;
+  }
+  
+  .jumbotron .col {
+    text-align: center;
+  }
+}
